--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,56 @@
 h1 a {
-    color: #FCA205;
+    color: #0073e6;
+    font-family: 'Mystery Quest';
+
+}
+body {
+    padding-left: 15px;
+    font-family: 'Maven Pro';
+    font-size: 15px;
+}
+.page-header {
+    background-color: #0073e6;
+    margin-top: 10;
+    margin-right: 10;
+    padding: 20px 20px 20px 350px;
+}
+
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+    color: #ffffff;
+    font-size: 38pt;
+    text-decoration: none;
+}
+.content {
+    margin-left: 10px;
+   /* margin-right: 10px; */
+}
+
+/*h1, h2, h3, h4 {
+    font-family: 'Lobster', cursive;
+} */
+
+.date {
+    color: #828282;
+}
+
+.save {
+    float: right;
+}
+.post-form textarea, .post-form input {
+    width: 100%;
+}
+
+.top-menu, .top-menu:hover, .top-menu:visited {
+    color: #ffffff;
+    float: right;
+    font-size: 26pt;
+    margin-right: 20px;
+}
+
+.post {
+    margin-bottom: 80px;
+}
+
+.post h1 a, .post h1 a:visited {
+    color: #0073e6;
 }
