--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -12,7 +12,7 @@ body {
     background-color: #0073e6;
     margin-top: 10;
     margin-right: 10;
-    padding: 20px 50px 50px 350px;
+    padding: 20px 20px 20px 350px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -44,7 +44,8 @@ body {
     color: #ffffff;
     float: right;
     font-size: 26pt;
-    margin-right: 0px;
+    margin-right: 20px;
+    margin-top: 10px;
 }
 
 .post {
