--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
     <title>Chiara's blog</title>
+     {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">
+            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+     {% endif %}
 </head>
 
 <body>
     <div class="page-header">
         <h1><a href="/">Chiara's Blog</a></h1>
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        {% endif %}
     </div>
 
 <div class="content container">
